// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dashboard admission confirm expired 1`] = `
<div
  className="dashboard"
  style={
    Object {
      "backgroundImage": "url('function SvgCombined_circuit(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCombined_circuit.name})
  );
}')",
    }
  }
>
  <div
    style={
      Object {
        "left": "50%",
        "position": "absolute",
        "top": "50%",
        "transform": "translateX(-50%) translateY(-50%)",
      }
    }
  >
    <div
      className="dashboard-design"
    >
      <Component />
    </div>
  </div>
</div>
`;

exports[`dashboard admission confirmed 1`] = `
<div
  className="dashboard"
  style={
    Object {
      "backgroundImage": "url('function SvgCombined_circuit(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCombined_circuit.name})
  );
}')",
    }
  }
>
  <div
    style={
      Object {
        "left": "50%",
        "position": "absolute",
        "top": "50%",
        "transform": "translateX(-50%) translateY(-50%)",
      }
    }
  >
    <div
      className="dashboard-design"
    >
      <Connect(Component)
        confirmedYet={true}
      />
    </div>
  </div>
</div>
`;

exports[`dashboard admission declined 1`] = `
<div
  className="dashboard"
  style={
    Object {
      "backgroundImage": "url('function SvgCombined_circuit(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCombined_circuit.name})
  );
}')",
    }
  }
>
  <div
    style={
      Object {
        "left": "50%",
        "position": "absolute",
        "top": "50%",
        "transform": "translateX(-50%) translateY(-50%)",
      }
    }
  >
    <div
      className="dashboard-design"
    >
      <Component />
    </div>
  </div>
</div>
`;

exports[`dashboard admitted 1`] = `
<div
  className="dashboard"
  style={
    Object {
      "backgroundImage": "url('function SvgCombined_circuit(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCombined_circuit.name})
  );
}')",
    }
  }
>
  <div
    style={
      Object {
        "left": "50%",
        "position": "absolute",
        "top": "50%",
        "transform": "translateX(-50%) translateY(-50%)",
      }
    }
  >
    <div
      className="dashboard-design"
    >
      <Connect(Component)
        confirmedYet={false}
        deadline="2048-01-30T04:39:47.512Z"
      />
    </div>
  </div>
</div>
`;

exports[`dashboard incomplete after deadline 1`] = `
<div
  className="dashboard"
  style={
    Object {
      "backgroundImage": "url('function SvgCombined_circuit(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCombined_circuit.name})
  );
}')",
    }
  }
>
  <div
    style={
      Object {
        "left": "50%",
        "position": "absolute",
        "top": "50%",
        "transform": "translateX(-50%) translateY(-50%)",
      }
    }
  >
    <div
      className="dashboard-design"
    >
      <span>
        Sorry, the application window has closed.
      </span>
    </div>
  </div>
</div>
`;

exports[`dashboard incomplete before deadline 1`] = `
<div
  className="dashboard"
  style={
    Object {
      "backgroundImage": "url('function SvgCombined_circuit(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCombined_circuit.name})
  );
}')",
    }
  }
>
  <div
    style={
      Object {
        "left": "50%",
        "position": "absolute",
        "top": "50%",
        "transform": "translateX(-50%) translateY(-50%)",
      }
    }
  >
    <div
      className="dashboard-design"
    >
      <div>
        <div>
          You haven't submitted your application yet. You have
        </div>
        <div
          style={
            Object {
              "color": "#00E073",
              "fontSize": "70px",
              "marginBottom": -15,
            }
          }
        >
          7263
        </div>
        <div>
          days to submit your application before the deadline:
          <br />
          <strong>
            November 19, 2018
          </strong>
          .
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`dashboard submitted 1`] = `
<div
  class="dashboard"
  style="background-image:url('function SvgCombined_circuit(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCombined_circuit.name})
  );
}')"
>
  <div
    style="position:absolute;top:50%;left:50%;transform:translateX(-50%) translateY(-50%)"
  >
    <div
      class="dashboard-design"
    >
      <span>
        Your application has been received – you are all good for now!
        <br />
        <br />
        We will email you when decisions are released and will handle any travel questions at that time. Thanks for applying :)
      </span>
    </div>
  </div>
</div>
`;
